EECIP/Content/Site.css
/* ... */
.field-validation-error {
    color: red;
}

.table {
    margin-bottom:0px;
}

.thead-default th {
    color: #464a4c;
    background-color: #eceeef;
}

.thead-inverse th {
    color: #fff;
    background-color: #4F4F4F;
}

.wrapper {
    clear: both;
    min-height: 100px;
    width: 100%;
    padding-top: 20px;
    padding-bottom: 20px;
}

.wrapper-grey {
    box-shadow: 0 1px 3px rgba(0,0,0,.1) inset;
    background-color: #efefef;
    color: #888;
    border-top: 1px solid #E1E1E1;
    border-bottom: 1px solid #E1E1E1;
}
.wrapper.padding50 {
    padding-top: 50px;
    padding-bottom: 50px;
}

.input-tooltip {
    color: #65BCDA !important;
    font-size: 20px !important;
}

.help-icon {
}
    .help-icon:hover {
        cursor:pointer;
    }


.btn-icon {
    background-color: #199C98;
    border: 0px solid #199C98;
}

.btn-eecip {
    color: #fff;
    background-color: #199C98;
    border-color: #1a8e8a;
}
    .btn-eecip:focus {
        color: #fff;
        background-color: #178c88;
        border-color: #178c88;
    }

    .btn-eecip:hover {
        color: #fff;
        background-color: #178c88;
        border-color: #178c88;
    }

/***************     TOP AND LEFT MENU STYLING     ******************/
.navbar-inverse {
    background-color: #393939;
}

.navbar-inverse .navbar-brand i, .navbar-inverse .navbar-brand:hover i {
       color: #A9D2A2;
    }

.navbar > .container {
    padding-right: 0;
    padding-left: 0;
}

    .navbar > .container .navbar-brand, .logo {
        font-size: 22px;
        min-width: 150px; 
    }

.navbar-tools > ul > li.dropdown {
    margin-left: 0; 
    margin-right: 0;
}

.container > .navbar-header, .container-fluid > .navbar-header, .container > .navbar-collapse, .container-fluid > .navbar-collapse {
    margin-right: 0;
    margin-left: 0;
}

.navbar-brand {
    height:46px;
}

.nav > li.dropdown .dropdown-toggle .badge-green {
    background-color: #097e00;
    border: none;
}

ul.main-navigation-menu > li a > i {
    color: #199C98;
}

ul.main-navigation-menu > li.active > a {
    background-color: #199C98;  /*#82B9DE;*/
}

    ul.main-navigation-menu > li.active > a .selected:before {
        color: #199C98 !important;
    }

.clip-chevron-left {
    color: #199C98;
}

.clip-chevron-right {
    color: #199C98;
}

.subsubheader {
    color: #888888;
    font-family: 'Raleway', sans-serif;
    font-size: 14px;
    font-weight: 300;
    letter-spacing: 0;
}

@media (max-width: 480px) {
    .nav {
        clear: none !important;
    }
}


/**********btnTour    */
.btntour {
    position: fixed;
    left: 20px;
    bottom: 50px;
    font-size: 18px;
    color: #fff;
    background-color: rgb(25, 156, 152);
    padding: 6px 9px;
}

@media (min-width: 768px) {
    .navigation-small .btntour {
        left: 0px !important;
        width: 35px !important;
        border-radius: 0px;
    }

    .navigation-small .btntour:hover {
        width: 225px !important;
    }

    .navigation-small .btntour > span {
        display: none;
    }

    .navigation-small .btntour:hover > span {
        display: inline;
    }
}


@media (max-width: 979px) and (min-width: 768px) {
    .main-navigation > .btntour {
        left: 0px !important;
        width: 35px !important;
        border-radius: 0px;
    }

        .main-navigation > .btntour:hover {
            width: 225px !important;
        }

        .main-navigation > .btntour > span {
            display: none;
        }

        .main-navigation > .btntour:hover > span {
            display: inline;
        }
}

/***************     FACET STYLING     ******************/
.facetHead {
    background-color: #ccc;
    padding: 4px 4px;
    margin-top: 16px;
    margin-bottom: 10px;
    font-size: 14px;
    line-height: 1.75em;
    color: #2C5987;
    text-transform: uppercase;
    cursor: pointer;
}

#facetHeaderState {
    margin: 0 24px 0 24px;
    line-height: 1em;
    font-size: 11px;
    padding: 0 0 0 2px;
    background-color: #f1f1f1;
}

.collapse-chevron .glyphicon {
    transition: .3s transform ease-in-out;
}

.collapse-chevron .collapsed .glyphicon {
    transform: rotate(-90deg);
}

.facContainter {
    max-height: 175px;
    overflow-x: hidden;
    overflow-y: auto;
}

#facetItemContainer2 > a {
    margin-left: 32px !important;
}

.facetItem {
    display: block;
    margin-left: 6px;
    font-size: 12px;
}

    .facetItem:hover, .facetItem:active, .facetItem:visited, .facetItem:focus {
        text-decoration: none;
        background-color: #f2f2f2;
    }



/***************     BREADCRUMB STYLING     ******************/
.breadcrumb {
    font-size: 11px;
    background: none;
    padding: 0 0 5px 0;
    margin: -12px 0 0 0;
}
    .breadcrumb a, .breadcrumb a:visited {
        color: #636267;
    }

/***************     FOOTER STYLING     ******************/
.footer-inner > a > img {
    height: 30px;
    padding-right: 10px;
}

.footer-items {
    text-align: right;
}

    .footer-items > a {
        color: #666;
        padding: 5px;
    }



/***************     PANEL STYLING     ******************/
.panel-heading {
    font-size: 15px;
    font-weight: 600;
    padding-top: 8px;
    font-family: 'Raleway', sans-serif;
    letter-spacing: 1px;
    color: #646464 !important;
    border-bottom: solid 2px #199C98 !important;
    padding-left: 10px;
    min-height: 40px;
    padding-bottom: 20px !important;
}

    .panel-heading > .panel-tools:hover {
        background-color: #B3B3B3;
    }

.panel-tools .btn.expand:before {
    content: "\e161";
    display: inline;
    float: right;
    font-family: 'clip-font';
    font-weight: 300;
    height: auto;
    text-shadow: none;
}

.panel-tools .btn.collapses:before {
    content: "\e164";
    display: inline;
    float: right;
    font-family: 'clip-font';
    font-weight: 300;
    height: auto;
    text-shadow: none;
}

.panel-footer {
    padding: 5px 15px;
}


.panel-default.danger {
    border-color: #dc3545;
}
/* ... */

